# logx

./: CMakeLists.txt  README.md
include/logx/: console.h  logx.h
logx/: CMakeLists.txt  console.cpp  logx.cpp
unittest/: CMakeLists.txt
unittest/gtest/: CMakeLists.txt  gtest-death-test.cc  gtest-death-test.cpp  gtest-filepath.cpp  gtest-internal-inl.h  gtest-port.cpp  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cpp  gtest.cc
unittest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h  gtest_prod.h
unittest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-tuple.h  gtest-type-util.h
unittest/testcase/: CMakeLists.txt  main.cpp  test.cpp
